--- a/about.html
+++ b/about.html
@@ -73,9 +73,9 @@
     <button onclick="sayHello()">Click Me</button>
   </main> -->
 
-  <footer>
+  <!-- <footer>
     <p>&copy; 2025 My Website</p>
-  </footer>
+  </footer> -->
 
   <script>
     function sayHello() {
